<resources>
    <string name="app_name">CalculadoraSuma</string>
    <string name="tv1">Ingrese primer numero</string>
    <string name="tv2">Ingrese segundo numero</string>
    <string name="btn">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>

</resources>